--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header>
+            <img id="logo" src="LOGO VENU NUOVO SENZA SFONDO PNG.png" alt="VENU">  
+            <h1>CONTATORE</h1>
+        </header>
+
         <div id="numero">0</div>
 
         <div id="box-tasti">
